# fantasy-player

./: .gitignore  BUILD.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: checks.yml  release.yml
docs/: ci-setup.md
docs/superpowers/plans/: 2026-04-13-playlist-sync.md
scripts/: bootstrap-windows.ps1  bootstrap_vendor.ps1  bootstrap_vendor.sh  build-macos-release.sh  netease_adapter.cjs  qqmusic_adapter.cjs  sign.env.example
sidecar/: audio_analyzer.py  requirements.txt
sidecar/models/: README.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_analyzer.rs  auth.rs  commands.rs  db.rs  lib.rs  llm_client.rs  logger.rs  main.rs  netease_api.rs  platform.rs  player.rs  qq_auth.rs  qqmusic_api.rs  queue.rs  secret_store.rs  secrets.rs  sync.rs
src-tauri/tests/: audio_analyzer_smoke.rs  llm_all_providers.rs  llm_smoke.rs  phase1_integration.rs  player_smoke.rs
src/components/: BrandMenu.tsx  LoginPanel.tsx  PlayBar.tsx  PlaylistPanel.tsx  QueuePopup.tsx  SearchPanel.tsx  SettingsPanel.tsx  SidePanelSwitch.tsx  Tooltip.tsx
src/hooks/: useActiveProvider.ts  useAudioFeatures.ts  useLLM.ts  useQueuePreAnalyze.ts
src/lib/: aiSearch.ts  api.ts  errors.ts  extractJsonArray.ts  logger.ts  panelTypes.ts
src/plugins/: index.ts
src/themes/: dynamicTheme.ts  inject.ts  registry.ts  types.ts
(+32 files in other folders)
