[package]
name = "melody"
version = "0.1.0"
description = "Fantasy Player — AI Music Player"
authors = []
edition = "2021"

[lib]
name = "melody_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "devtools"] }
tauri-plugin-shell = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "blocking"], default-features = false }
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "1"
anyhow = "1"
rand = "0.8"
once_cell = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = ["NSColor", "NSWindow", "NSResponder"] }
objc2-foundation = { version = "0.3", features = ["NSThread"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
